<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vlad.securitymachineapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_analysis"
        android:name="com.vlad.securitymachineapp.ui.analysis.AnalysisFragment"
        android:label="@string/menu_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/nav_param"
        android:name="com.vlad.securitymachineapp.ui.param.ParamFragment"
        android:label="@string/menu_param"
        tools:layout="@layout/fragment_param" />

    <fragment
        android:id="@+id/nav_state"
        android:name="com.vlad.securitymachineapp.ui.state.StateFragment"
        android:label="@string/menu_state"
        tools:layout="@layout/fragment_state" />

    <fragment
        android:id="@+id/nav_watch"
        android:name="com.vlad.securitymachineapp.ui.watch.WatchFragment"
        android:label="@string/menu_watch"
        tools:layout="@layout/fragment_watch" />

    <fragment
        android:id="@+id/nav_error"
        android:name="com.vlad.securitymachineapp.ui.error.ErrorFragment"
        android:label="@string/menu_error"
        tools:layout="@layout/fragment_error" />

<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="com.vlad.securitymachineapp.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_slideshow"-->
<!--        android:name="com.vlad.securitymachineapp.ui.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_logout"-->
<!--        android:name="com.vlad.securitymachineapp.ui.logout.LogoutFragment"-->
<!--        android:label="@string/menu_logout"-->
<!--        tools:layout="@layout/fragment_logout" />-->
</navigation>