<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment">

        <RelativeLayout
            android:id="@+id/secErr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="@dimen/sec_vertical_margin"
            android:layout_marginHorizontal="@dimen/sec_horizontal_margin"
            >


            <TextView
                android:id="@+id/secErrTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sec_title_margin"
                android:layout_marginBottom="@dimen/sec_title_margin_down"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/error_work"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/stanokErrImg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/secErrTitle1"
                android:layout_centerHorizontal="true"
                android:scaleType="fitCenter"
                android:src="@drawable/stanok" />

            <TextView
                android:id="@+id/secErrStanokTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stanokErrImg1"
                android:layout_marginTop="@dimen/sec_title_margin"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/error_time"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:textStyle="bold"
                android:textSize="17sp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/secErr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="@dimen/sec_vertical_margin"
            android:layout_marginHorizontal="@dimen/sec_horizontal_margin"
            android:layout_below="@id/secErr1"
            >


            <TextView
                android:id="@+id/secErrTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sec_title_margin"
                android:layout_marginBottom="@dimen/sec_title_margin_down"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/error_stanok"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/stanokErrImg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/secErrTitle2"
                android:layout_centerHorizontal="true"
                android:scaleType="fitCenter"
                android:src="@drawable/error_stanok" />

            <TextView
                android:id="@+id/secErrStanokTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stanokErrImg2"
                android:layout_marginTop="@dimen/sec_title_margin"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/error_act"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:textStyle="bold"
                android:textSize="17sp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/secErr3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="@dimen/sec_vertical_margin"
            android:layout_marginHorizontal="@dimen/sec_horizontal_margin"
            android:layout_below="@id/secErr2"
            >


            <TextView
                android:id="@+id/secErrTitle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sec_title_margin"
                android:layout_marginBottom="@dimen/sec_title_margin_down"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/error_stanok"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/stanokErrImg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/secErrTitle3"
                android:layout_centerHorizontal="true"
                android:scaleType="fitCenter"
                android:src="@drawable/error_stanok" />

            <TextView
                android:id="@+id/secErrStanokTitle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stanokErrImg3"
                android:layout_marginTop="@dimen/sec_title_margin"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/error_detect"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:textStyle="bold"
                android:textSize="17sp"
                />


        </RelativeLayout>


        <Button
            android:id="@+id/error_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/secErr3"
            android:text="@string/error_btn"
            android:paddingHorizontal="@dimen/sec_btn_padding_horizontal"
            android:paddingVertical="@dimen/sec_btn_padding_vertical"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/open_sans_semibold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

    </RelativeLayout>

</ScrollView>